# tbo

./: CMakeLists.txt  build.sh  build_debug.sh  build_release.sh  report.docx  sha256.txt
app/: BUILD  app.cc
chess_math/: BUILD  chess_math.cc
lib/: BUILD  lib.cc  lib.h
main/: BUILD  main.cc
src/: main.cpp
